nats-micro/tests/ui/service_error_invalid_kind_lowercase.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[kind("bad_kind")]
    #[error("bad")]
    Bad,
}

fn main() {}
